--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="jumbotron-2 text-center" style="background-image: url(https://www.stadiumgoods.com/media/catalog/product/5/5/555088-001_1.png); background-size: cover;">
   <h1>EGGs KICKs</h1><
     <p class="lead">Buying and Selling Made Easy!</p>
-    <a href="#" class="btn btn-primary">BUY</a>
+    <a href="buy.html" class="btn btn-primary">BUY</a>
     <a href="#" class="btn btn-primary">SELL</a>
   </div>
 
